--- a/src/Assets/CSS/style.css
+++ b/src/Assets/CSS/style.css
@@ -1,30 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Recursive:wght@300;400;500;600;700;800;900&family=Righteous&display=swap');
+
 *{
     box-sizing: border-box;
 }
 body{
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     /* font-family: 'Recursive', sans-serif;
-
     font-family: 'Righteous', cursive; */
 }
 .root{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-color: #FB6B6B;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 .first-screen{
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     align-items: center;
     margin: 22% auto 30% auto;
 }
+
 .first-screen>img{
     width: 36%;
     aspect-ratio: 136/161;
@@ -46,6 +48,7 @@ h1{
     width:66%;
     height: 8%;
 }
+
 .first-screen>a>button{
     width: 100%;
     height: 100%;
@@ -57,14 +60,16 @@ h1{
     justify-content: center;
     padding: 10% 9%;
 }
-.first-screen>a>button>h3{
-    width: 100%;
+h3{
     font-size: 18px;
     font-family: 'Recursive', sans-serif;
+}
+.first-screen>a>button>h3{
+    width: 100%;
     color:#D70900;  
 }
 
-button:hover{
+button:hover, .card>ion-icon:hover, .openned-card>img{
     cursor: pointer;
     filter: brightness(1.5);
     transform: translateY(-2px);
@@ -85,12 +90,143 @@ button:hover{
     width:100%;
     justify-content: center;
     align-items: center;
+    margin-bottom: 52px;
 }
 
 .header>img{
     margin-right: 22px;
 }
 
+.flash-cards{
+    display: flex;
+    flex-direction: column;
+    width:100%;
+    height: auto;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.card{
+    display: flex;
+    margin-bottom:25px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 5%;
+    background-color: #FFFFFF ;
+    border-radius: 5px;
+    height: 65px;
+    width: 80%;
+}
+
+.card>h4{
+    font-size: 16px;
+    font-family: 'Recursive', sans-serif;
+    font-weight: 700;
+    color:#333333;
+}
+
+.card>ion-icon{
+    font-size: 23px;
+}
+
+.openned-card{
+    width:80%;
+    height:131px;
+    padding:18px 5% 6px 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border-radius: 5px;
+    background-color: #FFFFD4;
+    margin-bottom: 25px;
+    position: relative;
+}
+
+.openned-card>img{
+    width:7%;
+    height: 30px;
+    position: absolute;
+    bottom: 6px;
+    right: 5%;
+}
+
+.buttons{
+    display: flex;
+    justify-content: space-between; 
+    align-items:flex-end;
+}
+
+.buttons button{
+    height: 38px;
+    width: 29%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    border: none;
+}
+
+.wrong-answer{
+    background-color: #FF3030;
+}
+
+.almost-right{
+    background-color: #FF922E;
+}
+
+.right-answer{
+    background-color: #2FBE34;
+}
+
+.buttons button h5{
+    color:#FFFFFF;
+    font-size: 12px;
+    font-family: 'Recursive', sans-serif;
+}
+
+ion-icon[name="close-circle"] {
+    color:#FF3030;
+}
+
+.wrong-card{
+    color: #ff3030 !important;;
+    text-decoration: line-through;
+}
+
+ion-icon[name="help-circle"] {
+    color:#FF922E;
+}
+
+.almost-right-card{
+    color:#FF922E !important;
+    text-decoration: line-through;
+}
+
+ion-icon[name="checkmark-circle"] {
+    color:#2FBE34;
+}
+
+.right-card{
+    color:#2FBE34 !important;
+    text-decoration: line-through;
+}
+
+.footer{
+    width:100%;
+    height:70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #FFFFFF;
+    position: fixed;
+    bottom: 0;
+    left:0;
+}
+
+.footer>h3{
+    color:#333333;
+}
 
 
 
