--- a/src/Assets/CSS/style.css
+++ b/src/Assets/CSS/style.css
@@ -60,9 +60,10 @@ h1{
     justify-content: center;
     padding: 10% 9%;
 }
-h3{
+h3{ 
     font-size: 18px;
     font-family: 'Recursive', sans-serif;
+    color:#333333
 }
 .first-screen>a>button>h3{
     width: 100%;
@@ -213,15 +214,42 @@ ion-icon[name="checkmark-circle"] {
 
 .footer{
     width:100%;
-    height:70px;
+    min-height:70px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     background-color: #FFFFFF;
     position: fixed;
     bottom: 0;
     left:0;
+}
+
+.footer>count{
+    text-align: center;
+}
+.final-heading{
+    margin:16px auto 14px auto;
+}
+
+.footer>p{
+    width: 40%;
+    font-size: 18px;
+    word-wrap: break-word;
+    margin-bottom: 14px;
+    text-align: center;
+    color:#333333;
+}
+
+.icons-footer{
+    display: flex;
+    margin-top: 7px;
+    width: 100%;
+    justify-content: center;
+}
+
+.icons-footer>ion-icon{
+    font-size: 23px;
 }
 
 .footer>h3{
