--- a/src/Assets/CSS/style.css
+++ b/src/Assets/CSS/style.css
@@ -144,7 +144,7 @@ button:hover, .card>ion-icon:hover, .openned-card>img{
 }
 
 .openned-card>img{
-    width:7%;
+    width:auto;
     height: 30px;
     position: absolute;
     bottom: 6px;
@@ -225,7 +225,7 @@ ion-icon[name="checkmark-circle"] {
     left:0;
 }
 
-.footer>count{
+.footer>.count{
     text-align: center;
 }
 .final-heading{
@@ -256,6 +256,32 @@ ion-icon[name="checkmark-circle"] {
     color:#333333;
 }
 
+.footer>a{
+    width:44%;
+    margin: 22px auto;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+.reboot{
+    width: 100%;
+    height: 100%;
+    background-color: #FB6B6B;
+    border-radius: 5px;
+    border: none;
+}
+.footer>a>.reboot>h4{
+    font-size: 14px;
+    font-family: 'Recursive', sans-serif;
+    text-align: center;
+    color:#FFFFFF;
+}
+
+a{
+    text-decoration: none;
+}
 
 
 
