--- a/src/Assets/CSS/style.css
+++ b/src/Assets/CSS/style.css
@@ -27,6 +27,25 @@ body{
     margin: 22% auto 30% auto;
 }
 
+input[name="zap-goals"]{
+    width:66%;
+    height: 43px;
+    background-color: #FFFFFF;
+    border: none;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 15px;
+    padding-left: 4%;
+    
+}
+input[name="zap-goals"]::placeholder{
+    color:#FB6B6B;
+    font-size: 14px;
+}
+
+
 .first-screen>img{
     width: 36%;
     aspect-ratio: 136/161;
@@ -46,19 +65,39 @@ h1{
 .first-screen>a{
     text-decoration: none;
     width:66%;
-    height: 8%;
+    height:auto;
+}
+
+.first-screen>button:hover, .first-screen>a>button :hover{
+    cursor: default;
+    filter: brightness(1);
+    transform: translateY(0);
+}
+
+.first-screen>button{
+    width: 66%;
+    height: 54px;
+    background-color: #E8E8E8;
+    border: none;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.first-screen>button>h3{
+    color:#C0C0C0;
 }
 
 .first-screen>a>button{
     width: 100%;
-    height: 100%;
+    height: 54px;
     background-color: #FFFFFF;
     border: 1px solid #D70900;
     border-radius: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 10% 9%;
 }
 h3{ 
     font-size: 18px;
