Bonus - Added the funcionality of choosing a deck of questions to answer

--- a/src/Assets/CSS/style.css
+++ b/src/Assets/CSS/style.css
@@ -323,6 +323,20 @@ a{
     text-decoration: none;
 }
 
+select{
+    background-color: #FFFFFF;
+    border-radius: 5px;
+    width:66%;
+    height:43px;
+    margin-bottom: 18px;
+    border:none;
+}
+
+select::placeholder{
+    color:#ADADAD;
+    font-size: 14px;
+    padding: auto 10%;
+}
 
 
 
